*Empty MediaWiki Message*

--- a/Hommelbier.mw
+++ b/Hommelbier.mw
@@ -1,6 +1,6 @@
 {{plat|Poperiengs}}
 [[Ofbeeldienge:Flesche_en_glas.JPG |thumb|Hommelbier: glas en flesche]]
-'''Hommelbier''' is e [[bier|streekbier]] uut [[Poperienge]]. 't Is ebrouwn deur [[brouwery Van Eecke]] ut [[Watou]]. Hommelbier bestoat sedert 1980.
+'''Hommelbier''' is e [[bier|streekbier]] uut [[Poperienge]]. 't Is ebrouwn deur [[brouwery Van Eecke]] ut [[Watou]]. Hommelbier bestoat sedert 1980. In d'uutsproake ôor je de ''H'' vaneigns nie, menschn vroagn en ''ommelbier'' of en ''ommeltje''. 
 
 ==Wuk is 't?==
 In Hommelbier zittn d'r drie sôortn Poperiengschn [[ommel]]. 't Bier ed e fyn aroma en e frische, lichtjes bittere smoake. 
