--- a/Provinciale_(voetbol).mw
+++ b/Provinciale_(voetbol).mw
@@ -7,7 +7,7 @@ Die reeksn zyn de lêegste van de Belgsche competisje, want doaboovn e je de nat
 
 In ’t sezoen 2007-2008 zyn dit de ploegn die in Êeste Provinciale uutkomn in [[West-Vloandern]]:
 
-VV Koksijde - SK Oostnieuwkerke - SK Eernegem - Sas Boezinge - FC Varsenare - SC Menen - [[BS Poperinge]] - VK Avelgem - SV Rumbeke - C. Roeselare - FC Meulebeke - FC Knokke - SP Club Blankenberge - Sk Steenbrugge - SK Torhout - HO Oostende
+VV Coxyde - SK Oostnieuwkerke - SK Eernegem - Sassport Boezinge - FC Varsenare - SC Menen - [[BS Poperinge]] - VK Avelgem - SV Rumbeke - Club Roeselare - FC Meulebeke - FC Knokke - SP Club Blankenberge - SK Steenbrugge - SK Torhout - HO Oostende
 
 [[Categorie:Voetbol]]
 
