--- a/Itoalië.mw
+++ b/Itoalië.mw
@@ -3,7 +3,7 @@
 '''Itoalië''' es een land in Europa. Itoalië ligt in 't zuudn van Europa, an de [[Middellansche Zêe]]. Itoalië es bekend voo zyn karakteristieke vorm, noamelik een botte. Der weunen a-peu pres 59.000.000 minsn in Itoalië. [[Rome]] es de ôofdstad.
 
 ==Polletiek==
-'t Land vormt ne republiek, met an 't ôofd President [[Giorgio Napolitano]], die voerol e cerimoniële rolle et. 't land es ipgebouwd in een voo [[Europa]] klassieke structuur me [[3 (getal)|drie]] machtn: de wetgevende macht (de koamer en de senoat), den uutvoerende (de regerienge) en de juridische macht.
+'t Land vormt ne republiek, met an 't ôofd President [[Giorgio Napolitano]], die voerol e cerimoniële rolle et. 't land es ipgebouwd in een voo [[Europa]] klassieke structuur me [[3 (getal)|drie]] machtn: de wetgevende macht (de koamer en de senoat), den uutvoerende (de regerienge) en de juridische macht(de flikn).
 
 Sedert 2006 es [[Romano Prodi]] êeste minister, achter e bittere verkiezingstryd tusschn de centrum-linkse (L'Ulivo) en de rekse (Forza Italia, ounder leidienge van [[Silvio Berlusconi]]). Itoalië es gekend voo zyn tumultueus polletiek klimoat en Berlusconi wos me zyn regeriengsperiode van [[5 (getal)|vuuf]] joar êen van de langst regerende êeste ministers van 't modern Itoalië.
 
