*Empty MediaWiki Message*

--- a/Itoalië.mw
+++ b/Itoalië.mw
@@ -3,12 +3,12 @@
 '''Itoalië''' es een land in Europa. Itoalië ligt in 't zuudn van Europa, an de [[Middellansche Zêe]]. Itoalië es bekend voo zyn karakteristieke vorm, noamelik een botte. Der weunen a-peu pres 59.000.000 minsn in Itoalië. [[Rome]] es de ôofdstad.
 
 ==Polletiek==
-'t Land vormt ne republiek, met an 't ôofd President [[Giorgio Napolitano]], die voerol e cerimoniële rolle et. 't land es ipgebouwd in een voo [[Europa]] klassieke structuur me [[3 (getal)|drie]] machtn: de wetgevende macht (de koamer en de senoat), den uutvoerende (de regerienge) en de juridische macht ('t gerecht en olles die dermei tope angt).
+'t Land vormt ne republiek, met an 't ôofd President [[Giorgio Napolitano]], die voerol e ceremoniële rolle et. 't land es ipgebouwd in een voo [[Europa]] klassieke structuur me [[3 (getal)|drie]] machtn: de wetgevende macht (de koamer en de senoat), den uutvoerende (de regerienge) en de juridische macht ('t gerecht en olles die dermei tope angt).
 
-Sedert 2006 es [[Romano Prodi]] êeste minister, achter e bittere verkiezingstryd tusschn de centrum-linkse (L'Ulivo) en de rekse (Forza Italia, ounder leidienge van [[Silvio Berlusconi]]). Itoalië es gekend voo zyn tumultueus polletiek klimoat en Berlusconi wos me zyn regeriengsperiode van [[5 (getal)|vuuf]] joar êen van de langst regerende êeste ministers van 't modern Itoalië.
+Sedert 2006 es [[Romano Prodi]] êeste minister, achter e bittere verkiezingsstryd tusschn de centrum-linkse (L'Ulivo) en de rekse (Forza Italia, ounder leidienge van [[Silvio Berlusconi]]). Itoalië es gekend voo zyn tumultueus polletiek klimoat en Berlusconi wos me zyn regeriengsperiode van [[5 (getal)|vuuf]] joar êen van de langst regerende êeste ministers van 't modern Itoalië.
 
 Rome es de ôofdstad en eit a-peu pres 4.000.000 inweuners. Neffest d'ôofdstad es't ôok de plekke woa da [[Vaticaanstad]] ligt, d'ôofdzetel van et [[Catholicisme]] en verbluufsplekke van de [[Paus]]. Andere grôte steedn zyn
-* [[Milan]]: 6.500.000 inweuners, Itoaliës (en 's weirelds) modeôofdstad en economische dryfvere van Itoalië.
+* [[Milaan]]: 6.500.000 inweuners, Itoaliës (en 's weirelds) modeôofdstad en economische dryfvere van Itoalië.
 * [[Noapels]]: 4.000.000 inweuners
 * [[Turyn]]: 2.200.000 inweuners.
 Doarnoast zyn der nog steedn die over de hêle weireld gekend zyn voo verschillende redenn: [[Venetië]], de stad ip het woater, [[Pisa]], me zyne scheve torre, [[Verona]], stad van [[Romeo en Julia]], [[Firenze]], kunststad en ôofdstad van et toeristisch sterk gewaardeerde [[Toscane]].
