--- a/Vrouwe.mw
+++ b/Vrouwe.mw
@@ -24,11 +24,11 @@ Secundaire geslachtskenmerkn typisch voor e wuuf zyn:
 *drieoekige pubisbeoaringe
 *borstoentwikkelinge
 *een brèè bekken
-*borstn, under melkklieren
+*borstn,LEKKER!!!! under melkklieren
 
 O je nog ip andre kenmerken zoe vôortgoan wordt et ol styf moeilik omdan de uutzounderingen ol even vele vôorenkommen ols de regel zelve en omdan ze oak dikkels sociaal-culturèl bepoald zyn:
 *wuuven smienkn under, mo sommigste vinten doen dat ook
-*wuuven dragen rokkn, mor in Schotland droagen de vinten dat ook (ol noemn ze dat doar nen ''kilt'')
+*wuuven dragen rokkn en bh's en strings of niet!!, mor in Schotland droagen de vinten dat ook (ol noemn ze dat doar nen ''kilt''en da zin omo's!!)
 *wuuven en lank oar, mo der zynder even vele me kort oar (volgens sommigste studies voroal on ze getrouwd zyn en kienders gekregn en) en der zyn ook vintn me lank oar
 
 [[Categorie:Mens en moatschappy]]
