blad ersteld noa de versie van [[Gebruker:Thijs!bot|Thijs!bot]] deur de bydroage van [[Specioal:Contributions/84.193.71.71|84.193.71.71]] were weg te doen

--- a/Koersvelo.mw
+++ b/Koersvelo.mw
@@ -4,8 +4,8 @@ Ne '''koersvelo''' es e sorte van [[velo]] die specioal gemakt es vo mee ip [[Ve
 Koersvelo's zyn zô gemakt da ze zo lichte meuglik zyn, mo toch voldoende stevig.  
 
 ==Van stoal na carbon==
-An de vorm zie je nie etzelste lik bie een wuf, mo e gelijkenis is da je der ook op ku zitn!. En je moe der vo betaaln (by the way ga na riga, tzit da vul oerekotn en ze zin lekker!!)
-shit your fucking face unclefucker your e fuckfuckingjude en je stinkt!!!!!
+An de vorm es 't er sedert d'uutvindienge van de velo nie hêel vele veranderd, mo wel an de materioaln woavan da koersvelo's gemakt zyn.  't Es nen trend vo de velo zo lichte en zo aerodynoamisch meuglik te moakn.  Woa da de frames ('t "skelet" van de velo, 't ginne da je der nie kunt vandoen: de fourches, ...) eertyds van [[stoal]] gemakt weirdn, zyn ze nu meestol van [[carbon]] (e lichte, mo styf arte kunststoffe), [[titanium]], [[aluminium]] of e mingelienge.
+Ne typische amateur koersvelo weegt tegenwoordig oby de 10 kilo's (of 'n twuk minder).  Van de [[UCI]] mag ne koersvelo in officiele wedstrydn nie minder of 6,8 kilo's wegen.
 
 ==Velogroepn==
 Ne velogroep is de verzoamelnoame van olles an de velo da gin dêel es van 't frame: de derailleurs, de vitessen, de speekn, de ketting, de frings, ... 
