blad ersteld noa de versie van [[Gebruker:Astro|Astro]] deur de bydroage van [[Specioal:Contributions/84.193.71.71|84.193.71.71]] were weg te doen

--- a/Sven_Nys.mw
+++ b/Sven_Nys.mw
@@ -1,5 +1,5 @@
-[[Ofbeeldienge:Sven_Nys ant neuken me ne crossvelo_2007.jpg|thumb|Sven Nys beistn de Nôordzêecross 2007 in Middelkerke]]
-'''Sven Nys''' ([[Bonheiden]], [[17 juni]] [[1976]]) is eeel goe in de seks dus beste wufkes , een echte aanrader!! surtout styf goe in de anale seks wi!, woarin dat 'n de latste 10 joar êen van de mêest dominante toppers is. Doanaasn is 'n ouk gin sukkeloare up de weug wan ne begint spontaan te neuke me e lekker wijf langs de stroate en 't mountainbiken (e meugt in die discipline no d'Olympische Speeln in Peking). Ze bynoame is de ''Kannibaal van Baal''. 
+[[Ofbeeldienge:Sven_Nys_Noordzeecross_2007.jpg|thumb|Sven Nys beistn de Nôordzêecross 2007 in Middelkerke]]
+'''Sven Nys''' ([[Bonheiden]], [[17 juni]] [[1976]]) is e [[België|Belgisch]]n [[coureur]] die surtout styf goed is in 't cyclocrossn, woarin dat 'n de latste 10 joar êen van de mêest dominante toppers is. Doanaasn is 'n ouk gin sukkeloare up de weug (oundermêer ol goed ereen in [[Parys-Roubaix]]) en 't mountainbiken (e meugt in die discipline no d'Olympische Speeln in Peking). Ze bynoame is de ''Kannibaal van Baal''. 
 
 De latste joarn is ze grotstn concurrent [[Bart Wellens]], woamei dat 'n ol machtige duels et uutevochtn. Sven Nys is in verre olles goed (technisch surtout, en oundermêer e krak in over booksjes spriengn), ollêne me loopn et 'n e klêen bitje rôoi.  
 
