--- a/Vrouwe.mw
+++ b/Vrouwe.mw
@@ -9,14 +9,13 @@ In 't [[West-Vlams]] es et word wuuf nog vele gebruukt, lik in de middelêeuwn. 
 De elementairste definitie van een wuuf is da ze et dêèl is van de menselike sôorte met twèè X-chromosôomn. Moa lik ip olles zyn der doar ôok uutzounderingen ip: der zyn wuven me 3 X-chromosôom'n, en der zyn der zelfs me een Y-chromosôom (lik d'actrice [[Jamie Lee Curtis]] die 2 X-en eet en een Y, mo da je toch moeilik een vint ku noemn).
 
 ===Primaire geslachtskenmerkn===
-O je kykt no da lekker ding ier noost ku je de volgende specifieke geslachtsorgoann zien:
+O je kykt no de geslachtskenmerkn ku je de volgende specifieke geslachtsorgoann zien:
 
-*Vagina. In den ingang zie je schaamhaar(hymen) en ip 't ende de baarmoedermound. daar kome mannelijke ventn opgewondn va ma da is een ander veraal...
+*Vagina. In den ingang zit et maagdevlies (hymen) en ip 't ende de baarmoedermound.
 *Baarmoeder
 *Eierstokkn (ovarium) en eileiders (oviducti)
 *Schaamlippen en venuseuvel
 *Clitoris (under ne kitteloare)
-*tetten!!-> geen kommentaar:p...
 
 ===Secundaire geslachtskenmerkn===
 Secundaire geslachtskenmerkn typisch voor e wuuf zyn:
@@ -24,11 +23,11 @@ Secundaire geslachtskenmerkn typisch voor e wuuf zyn:
 *drieoekige pubisbeoaringe
 *borstoentwikkelinge
 *een brèè bekken
-*borstn,LEKKER!!!! under melkklieren
+*borstn, under melkklieren
 
 O je nog ip andre kenmerken zoe vôortgoan wordt et ol styf moeilik omdan de uutzounderingen ol even vele vôorenkommen ols de regel zelve en omdan ze oak dikkels sociaal-culturèl bepoald zyn:
 *wuuven smienkn under, mo sommigste vinten doen dat ook
-*wuuven dragen rokkn en bh's en strings of niet!!, mor in Schotland droagen de vinten dat ook (ol noemn ze dat doar nen ''kilt''en da zin omo's!!)
+*wuuven dragen rokkn, mor in Schotland droagen de vinten dat ook (ol noemn ze dat doar nen ''kilt'')
 *wuuven en lank oar, mo der zynder even vele me kort oar (volgens sommigste studies voroal on ze getrouwd zyn en kienders gekregn en) en der zyn ook vintn me lank oar
 
 [[Categorie:Mens en moatschappy]]
