--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -1,6 +1,6 @@
 {{plat|Kortryks}}
 
-'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''Volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van 't moment. 't Is e coureur die initiatief nimt at 'n goe bêenn et en ni te vele rekent, moa geirn deurevlamt.
+'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''Volderke'' voo de fans, es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van 't moment. 't Is ne coureur die initiatief durft te pakkn at ie goeie bêenn eit en ni te vele rekent, moa geirn deurevlamt.
 
 ==Carrière==
 ===Jeugdjoarn===
