*Empty MediaWiki Message*

--- a/Slype.mw
+++ b/Slype.mw
@@ -20,7 +20,7 @@
 
 Over 't groundgebied va Slype lopt 't [[Kanoal Plassendale-Nieuwpoort]]. In 't westen van de deelgemeente ligt er round e brugge over diene voart 't gehucht de [[Rattevalle]].
 
-De [[kerke]] en de parochje zie genoemd noa [[Sint-Nikloaj]].
+De [[kerke]] en de parochje zyn genoemd noa [[Sintekloai|Sint-Nikloaj]].
 
 
 [[Ofbeeldienge:Slijpe - Skyline.jpg|thumb|left|Slype]]
