*Empty MediaWiki Message*

--- a/Westoek.mw
+++ b/Westoek.mw
@@ -2,12 +2,8 @@ De '''Westoek''' is e streke ol weerskantn van [[de Schreve]]. Deur de Westoek l
 
 ==Vlamschn Westoek==
 Den Vlamschn Westoek legt in 't uuterste westn van de [[België|Belgische]] provinsje [[West-Vloandern]] (buutnstoanders noemn dat ouk wel e ki de ''Far West'').
-De streke omvat de volgende arroundissementn:
-*[[Arroundissement Veurne|Veurne]]. 
-*[[Arroundissement Diksmude|Diksmude]]
-*[[Arroundissement Yper|Yper]]
-
-De Westoek omvat de steedn en gemêentn:
+De streke omvat de arroundissementn: [[Arroundissement Veurne|Veurn]], [[Arroundissement Diksmude|Diksmude]] en [[Arroundissement Yper|Yper]].
+De Vlamschen Westoek omvat de steedn en gemêentn:
 * [[Diksmude]]
 * [[Euvelland]]
 * [[Kookloare]]
@@ -25,13 +21,16 @@ De Westoek omvat de steedn en gemêentn:
 * [[Yper]]
 * [[Zunnebeke]]
 
-De Belgische kustgemêentn [[De Panne]], [[Koksyde]] en [[Nieuwpoort]] wordn toeristisch soms by een andere regio ingedêeld, de [[Westkust]].
+De Belgische kustgemêentn [[De Panne]], [[Koksyde]] en [[Nieuwpoort]] wordn toeristisch soms by een andere regio ingedêeld: de [[Westkust]].
+
+=== Band mi Vrankryk ===
+De Vlamschen Westoek werkt sedert 2008 nauwe t’ope mi Vrankryk. In april 2008 besliste Vlams minister [[Geert Bourgeois]] mi zyn Franschen collega om e Europeesche Groeperieng vo Territoriale Soamnwerkieng (EGTS) te moakn tusschen de Westoek en de [[Opaalkust]]. Dat zou moetn ten vôordele zyn van ‘t toerisme, mobiliteit, ulpverlenieng en communicoasje. 
 
 ==Franschn Westoek==
 De [[Franschn Westoek]] legt in 't nôordn van [[Vrankryk]] en komt overêen me 't Fransche arroundissement [[Duunkerke]].
 In [[Vloandern]] noemn we dien regio [[Frans-Vloandern]].
 
-==Externe koppelienge==
+==Externe koppeliengn==
 *[http://www.toerismewesthoek.be Vlamschn Westoek (site van provinciebestuur)]
 *[http://www.westhoek.be Vlamschn Westoek (commerciële site)]
 
