--- a/Wevelgem.mw
+++ b/Wevelgem.mw
@@ -55,6 +55,7 @@ Wevelgem et drie dêelgemêentn. Buutn Wevelgem zelve liggn der in de gemêente 
 * De [[neoromoans]]e Sint-Hilariuskerke, in 't centrum, van round 1880-1882
 * De Sint-Theresiakerkein de Sint-Theresiaparochje, e bitje in 't westn van 't centrum, langs de boane noa [[Mêenn]].
 * 't Sint-Pauluscollege, wos et Joegoslavisch gebouw van ip den Expo '58, es nu e schole
+* Idder joar op e woensdag, 'n arrivée van de koerse [[Gent-Wevelgem]].
 <gallery>
 Image:Wevelgem - Sint-Hilariuskerk 1.jpg|Binnryen va Wevelgem via Menenstraat
 Image:Wevelgem - Sint-Hilariuskerk 3.jpg|Sint-Hilariuskerke
