*Empty MediaWiki Message*

--- a/Velokoerse.mw
+++ b/Velokoerse.mw
@@ -12,7 +12,7 @@ Olle disciplines zyn [[Olympische speeln|Olympisch]], uutgenoomn cyclocross.
 De discipline met de mêeste internationoale uutstroalienge es de koerse ip de weg. Et wielerseizoen start in januoari en endigt in november. D'r zyn twêe sôortn koersen:
 
 ===Êendagswedstrydn===
-Êendagswedstrydn zyn, lik of da de noame ol verklapt, wedstrydn die over êne dag gereedn wordn. Der zyn veel êendagswedstrydn, ingedêeld in categorieën volgens under belang. De belangrykste wedstrydn zyn sinsn 2005 gegroepeerd in de UCI [[Pro Tour]]. De belangrykste periode vo de êendagswedstrydn is moart-april, met een ipêenvolginge van Pro Tour-wedstrydn. Een ander belangryke periode es et nojoar, met een twêede reeks wedstrydn eindigend in 't [[Weireldkampioenschap]]. 
+Êendagswedstrydn zyn, lik of da de noame ol verklapt, wedstrydn die over êne dag gereedn wordn. Der zyn veel êendagswedstrydn, ingedêeld in categorieën volgens under belang. De belangrykste wedstrydn zyn sinsn 2005 gegroepeerd in de UCI [[Pro Tour]]. De belangrykste periode vo de êendagswedstrydn is moart-april, met een ipêenvolginge van Pro Tour-wedstrydn. Een ander belangryke periode es et nojoar, met een twêede reeks wedstrydn eindigend in 't [[Weireldkampioenschap (koers)|Weireldkampioenschap]]. 
 
 Een aantal van de belangrykste wedstryden zyn:
 * [[Miloan-San Remo]]
