--- a/Weireldkampioenschap_(koers).mw
+++ b/Weireldkampioenschap_(koers).mw
@@ -2,7 +2,7 @@
 D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en de vrouwn. De winnoare meugt e hêel joar e wittn boaj andoen mit e regenboge op. 
 
 == Organisoasje en parcours ==
-’t WK goat idder joar deure in e andern stad. Daodeure verschilln de parcours ossan. Nu is ’t e ki plat en zyn de sprinters bevôordeeld, ton were zit er e bergsje in en zyn de klemmers in ’t vôordêel.  ’t WK is ol twi keirs in West-Vloandern organiseerd ewist: in 1950 in [[Môoslee]] en in 1957 in [[Woaregem]]. 
+’t WK goat idder joar deure in e andern stad. Daodeure verschilln de parcours ossan. Nu is ’t e ki plat en zyn de sprinters bevôordeeld, ton were zit er e bergsje in en zyn de klemmers in ’t vôordêel. ’t WK is ol twi keirs in [[West-Vloandern]] organiseerd ewist: in 1950 in [[Môoslee]] en in 1957 in [[Woaregem]]. 
 
 == Recente winnoars (profs/elite) ==
 *1996	[[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
@@ -10,7 +10,7 @@ D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en d
 *1998	Oscar Camenzind [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
 *1999	[[Oscar Freire]] [[Ofbeeldienge:Flag of Spain.svg|20px]]
 *2000	Romans Vainsteins
-*2001	[[[Oscar Freire]] [[Ofbeeldienge:Flag of Spain.svg|20px]]
+*2001	[[Oscar Freire]] [[Ofbeeldienge:Flag of Spain.svg|20px]]
 *2002	[[Mario Cipollini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 *2003	Igor Astarloa [[Ofbeeldienge:Flag of Spain.svg|20px]]
 *2004	[[Oscar Freire]] [[Ofbeeldienge:Flag of Spain.svg|20px]]
