+ foto (zelf genomen)

--- a/Weireldkampioenschap_(koers).mw
+++ b/Weireldkampioenschap_(koers).mw
@@ -1,3 +1,4 @@
+[[Ofbeeldienge:Tomboonen antwerpen.JPG|thumb|Tom Boonen als weireldkampioen (2006)]]
 ‘t '''Weireldkampioenschap''' is e [[velokoerse|velokoers]] die ol sedert 1927 organiseerd is deur ’t UCI, de Internationale Wielerunie. De koers is een êendagswedstryd op de boane. Sedert 1994 bestoat er ouk e weireldkampioenschap tydrit. 
 D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en de vrouwn. De winnoare meugt e hêel joar e wittn boaj andoen mit e regenboge op. 
 
