*Empty MediaWiki Message*

--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -1,5 +1,5 @@
 [[Ofbeeldienge:Tom_Boonen_Nancy_TDF_2005.JPG|right|thumb|300px|Tom Boonen in 'n groenn boai beistn de [[Rounde van Vrankryk]] van 2005.]]
-'''Tom Boonen''' ([[Mol (gemêente)|Mol]], [[15 oktober]] [[1980]]) is e [[coureur]] uut Baaln in de Kempn. Wuk da [[Johan Museeuw]] ewist is in de joarn tneegntig, is Boonen in d'êeste 10 joar van d' êentwientigste êeuwe. Buutn e hêeln oop klassiekers en semi-klassiekers, surtout in 't vôorjoar, et 'n ol 'n groenn boai in de [[Rounde van Vrankryk]] ewonn en is 'n weireldkampioen ekommn in 2005 in [[Madrid]].
+'''Tom Boonen''' ([[Mol (gemêente)|Mol]], [[15 oktober]] [[1980]]) is e [[coureur]] uut Baaln in de Kempn. Wuk da [[Johan Museeuw]] ewist is in de joarn tneegntig, is Boonen in d'êeste 10 joar van d' êentwientigste êeuwe. Buutn e hêeln oop klassiekers en semi-klassiekers, surtout in 't vôorjoar, et 'n ol 'n groenn boai in de [[Rounde van Vrankryk]] ewonn en is 'n [[Weireldkampioenschap (koers)|weireldkampioen]] ekommn in 2005 in [[Madrid]].
 
 ==Jeugd==
 Tom Boonen is de zeune van André Boonen, die zevve nog prof ewist is. Boonen is begunn koersn byn de nieuweliengn, at 'n liefebber wos, et 'n nog en endetje byn de Groeniengespurters van [[Kortryk]] ereen.
