link na Weireldkampioenschap (koers)

--- a/Briek_Schotte.mw
+++ b/Briek_Schotte.mw
@@ -2,7 +2,7 @@
 '''Albéric (Briek) Schotte''', bygenoamd ''Yzern Briek'' ([[Koanegem]], [[7 september]] [[1919]] - [[Kortryk]], [[4 april]] [[2004]]) wos e [[coureur]] en sportdirecteur.
 
 En ed twè kêers de [[Rounde van Vloandern]] gewounn (1942 en 1948). In totoal et ie twientig kêren meegedoan an die Roende.
-E wos ôok twè kêers weireldkampioen (1948, in Valkenburg en 1950, in [[Môoslee]]). In 1948 wos'n ôok twiddn in de [[Tour de France]] achter Gino Bartali.  
+E wos ôok twè kêers [[Weireldkampioenschap (koers)|weireldkampioen]] (1948, in Valkenburg en 1950, in [[Môoslee]]). In 1948 wos'n ôok twiddn in de [[Tour de France]] achter Gino Bartali.  
 Ols beroepsrydre wint ie 61 koersn.
 
 Briek wos e werker en e wroeter op zyn vèlo: een echtn [[Flandrien|Flandrien]]. In Koanegem stoat er e beeld van nem, gemakt deur [[Jef Claerhout]].
