--- a/Johan_Museeuw.mw
+++ b/Johan_Museeuw.mw
@@ -1,7 +1,7 @@
 {{veranderplat|Jabbeeks}}
 [[Image:Johan Museeuw.jpg|thumb|right|Johan Museeuw]]
 
-'''Johan Museeuw''' ([[Vassenoare]], [[13 oktober]] [[1965]]) was ne [[België|Belgische]] [[coureur]]. Zyn byname is "de Leeuw van Vloandern". Je was êen van de latste [[Flandrien|Flandriens]] die we gekend ein. Ie was ne meester van de eindagskoersn, en eit ze bykans ollemoale gewonnen (sommige mêer bergachtige woarn nie ip zyn lyf geschreevn). J'es ôok ne kêer weireldkampioen geworden in 1996. In de Tour de France eit ie ôok een aantal rittn gewounn en eit ie de gele trui gedreegn.
+'''Johan Museeuw''' ([[Vassenoare]], [[13 oktober]] [[1965]]) was ne [[België|Belgische]] [[coureur]]. Zyn byname is "de Leeuw van Vloandern". Je was êen van de latste [[Flandrien|Flandriens]] die we gekend ein. Ie was ne meester van de eindagskoersn, en eit ze bykans ollemoale gewonnen (sommige mêer bergachtige woarn nie ip zyn lyf geschreevn). J'es ôok ne kêer [[Weireldkampioenschap (koers)|weireldkampioen]] geworden in 1996. In de Tour de France eit ie ôok een aantal rittn gewounn en eit ie de gele trui gedreegn.
 
 In zyn carrière eit ie in verschillige ploegn gereden, moar mêestal was 't er êen constante: [[Patrick Lefevere]]. 
 
