link na Weireldkampioenschap (koers)

--- a/Jean-Pierre_Monseré.mw
+++ b/Jean-Pierre_Monseré.mw
@@ -1,8 +1,7 @@
 {{Plat|Roeseloars}}
-
 '''Jean-Pierre "Jempi" Monseré''' ([[Roeseloare]], [[8 september]] [[1948]] - Retie, [[15 moarte]] [[1971]]) wos ne [[coureur]]. 
 
-Toet by de beroepsryders rêed ie up de boane én up de piste. By de jeugd woent 'n ni vele, moa by de beroepsryders wos 't drect prys. In 1969 woent 'n de [[Roende van Lombardeye]]. E joar loatre wost 'n weireldkampioen up de boane by de beroepsryders. Moa toen sloeg 't nôodlot toe: up de 15e moarte in '71 rêed Jempi ne koers in Retie. Die koers wos 'n vôorbereidinge vo [[Milaan - San Remo]]. Je rêed frontoal up nen otto die van den ander kant kwoam en wos up slag dôod. 'n Grôot talent gienk verlôorn.
+Toet by de beroepsryders rêed ie up de boane én up de piste. By de jeugd woent 'n ni vele, moa by de beroepsryders wos 't drect prys. In 1969 woent 'n de [[Roende van Lombardeye]]. E joar loatre wost 'n [[Weireldkampioenschap (koers)|weireldkampioen]] up de boane by de beroepsryders. Moa toen sloeg 't nôodlot toe: up de 15e moarte in '71 rêed Jempi ne koers in Retie. Die koers wos 'n vôorbereidinge vo [[Milaan - San Remo]]. Je rêed frontoal up nen otto die van den ander kant kwoam en wos up slag dôod. 'n Grôot talent gienk verlôorn.
 
 Jempi Monseré wos ne goe moat van [[Roger De Vlaeminck]], je rêed tôpe met em by Flandria.
 
