--- a/Alexander_Poesjkin.mw
+++ b/Alexander_Poesjkin.mw
@@ -82,6 +82,7 @@ Achter de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen v
 == Externe koppeliengn ==
 * [http://www.youtube.com/watch?v=8eiLwUCuzTY Finale scène van "Jevgeni Onegin" van Pjotr Tsjaikovski, me de stemmn van Nuccia Focile en Dimitri Chvorostovski. Me Fransche oundertitels.]
 * [http://www.youtube.com/watch?v=0YpdzZ7ckx0 Stiksje uut tonèelstik "Dame van Pykes". Herman krygt nachtelik bezoek van 't wuuf dat 'm zjuust vermoord et. "Oud wuuf, stopt domee!" Russisch.]
+* [http://www.pushkins-poems.com/ Pushkin's Poem's {{toale|en|Iengels}}]
 {{commons|Alexander Pushkin|Alexander Poesjkin}}
 
 == Bronn ==
