*Empty MediaWiki Message*

--- a/Karel_den_Goein.mw
+++ b/Karel_den_Goein.mw
@@ -5,13 +5,13 @@
 | periode = 1119 - [[1127]]
 | vôorganger = Boudewyn VII van Vloandern
 | ipvolger = Willem Clito
-| voader = Knoet IV van Denemarkn
+| voader = Knud IV van Denemarkn
 | moeder = Adela van Vloandern
 }}
 '''Karel den Goein''' (Denemarkn, [[1080]]/[[1086|86]] – [[Brugge]], [[2 moarte]] [[1127]]) was [[Groaf van Vloandern]] van 1119 tout an z’n dôod. J’is vermôord gewist in de [[Sint-Donaaskathedroale|Sint-Donaaskerke]] ip de [[Burg (Brugge)|Burg]] in [[Brugge]].
 
 ==Geschiedenisse==
-Karel van Denemarkn, loater Karel ''den Goein'' genoemd, is geboorn in [[Denemarkn]]. Je was de zeune van keunink Knoet IV ''den Illign'' van Denemarkn en van Adela van Vloandern, dochter van groaf Robrecht I ''de Fries'' en Geertruida van Saksn.
+Karel van Denemarkn, loater Karel ''den Goein'' genoemd, is geboorn in [[Denemarkn]]. Je was de zeune van keunink Knud IV ''den Illign'' van Denemarkn en van Adela van Vloandern, dochter van groaf Robrecht I ''de Fries'' en Geertruida van Saksn.
 
 Achter de môord (ôok in e kerke) ip eur vint in 1086 vertrok z’n moeder no Vloandern met eur kinders Karel, Ingertha en Cecilia.
 Karel groeideg ip an ’t hof van z’n grôotvoader Robrecht I ''de Fries'' en z’n nounkel Robrecht II. In 1092 vertrok z’n moeder nor [[Itoalië]], vo te trouwn mè Rogier Bursa, ertog van Apulië. 
