*Empty MediaWiki Message*

--- a/2_moarte.mw
+++ b/2_moarte.mw
@@ -1,7 +1,7 @@
 {{Moarte}}
 
-==Gebeurtenissn==
-*[[1127]] - [[Karel de Goede]] wor vermôord in de Sint-Donoaskerke in [[Brugge]]
+==Gestorvn==
+*[[1127]] - [[Karel den Goein]] wordt vermôord in de [[Sint-Donoaskerke]] in [[Brugge]]
 
 [[Categorie:Datum]]
 
