*Empty MediaWiki Message*

--- a/1127.mw
+++ b/1127.mw
@@ -2,6 +2,10 @@
 ;April
 *[[6 april|6]] - [[Brugge]] krygt stadsrechtn
 
+==Gestorvn==
+;moarte
+*[[2 moarte|2]] - [[Karel den Goein]]
+
 [[Category:12e eeuw]]
 
 [[af:1127]]
