--- a/Art_Nouveau_(Blanknberge).mw
+++ b/Art_Nouveau_(Blanknberge).mw
@@ -5,7 +5,7 @@ In de periode da [[Blanknberge]] uutgroeide van een schoamel visschersstadje noa
 In Blanknberge dateren d'r nog styf vele uzen uut de periode tusschn 1890 en 1915. Deur de specioale weersomstandigeedn an de kust wierd er geglazeurde bakstêen gebruukt vo de gevelbeklêdienge en algauwe wierdn de gevels en terrassn versierd me prachtige wandtegelplateaus. Grôte en gekende gebouwen zyn d'r wel nie, moar ip gebied van kwaliteit, varioatie en antal van z'n tegelplateaus wordt Blanknberge gereeknd by de Europese topklasse.
 
 ==Toerisme==
-In Blanknberge wordn d'r gereegld "Art-Nouveau-wandeliengen" uutgestippeld langs de schôonste uzen. D'r wordn ton platselikke anekdotes verteld over de nostalgische Belle-Epoque-sfeer.
+In Blanknberge wordn d'r geregeld "Art-Nouveau-wandeliengen" uutgestippeld langs de schôonste uzen. D'r wordn ton platselikke anekdotes verteld over de nostalgische [[Belle Epoque|Belle-Epoque]]-sfeer.
 
 ==Externe koppelienge==
 *[http://www.artnouveaublankenberge.be/ Art Nouveau in Blanknberge]
