*Empty MediaWiki Message*

--- a/Eist.mw
+++ b/Eist.mw
@@ -25,7 +25,7 @@ De toeristische periode van Heist begost in 1860 en d'r kwam ton een êeste hote
 Achter de [[twiddn Weireldôorloge|twidde weireldoorloge]] veranderde 't uutzicht van Heist. De spôorweg wierd verleid noa 't zuudn en in 1951 kwam 't er een nieuwe stoatie en weunwyk.
 
 Tou in de joarn tsjeventig kwam 't zêewoater by ôog ty tou an d'n dyk. Met de werkn in Zêebrugge is ter vele zand ip 't strange van Heist gespootn gewist. Sedertdien is ter deur de werkinge van ôog en lêeg ty nog vele zand bygekommn. 't Woater komt ol lange nie mi tou an dn dyk. Heist et e vrêe brêed strange.
-Ip d'n dyk zyn sedert de joarn tsjeventig bykan al d'oude uuzn (vele Belle Epoque me bel-étage) afgebrookn en vervangn deur appartementn.
+Ip d'n dyk zyn sedert de joarn tsjeventig bykan al d'oude uuzn (vele [[Belle Epoque]] me bel-étage) afgebrookn en vervangn deur appartementn.
 An den dyk van Zêebrugge is ter vrêe vele zand by malkoar gewoaid. Zovele zelfs da ter e spontoane duunvormink is gekommn. 't Is sedert kort nateurreservoat.
 
 ==Evenementn==
