--- a/Scarphout_(Blanknberge).mw
+++ b/Scarphout_(Blanknberge).mw
@@ -10,6 +10,7 @@ Vroeger woarn de Blanknbergsche visschers styf bygelovig. At er etwien was woava
 ==Noame==
 Scarphout bestoat nie me, moa toch kom je de noame nog vele teegn in Blanknberge, (hotel, residentie, winkel...). D'r is ook de "Royal Scarphout yachtclub" en vroeger wast er een [[basket]]club in Blanknberge die Scarphout noemde.
 Ook de dichteresse Arlette Paepe et de noame gebruukt vor eur pseudoniem: [[Ria Scarphout]].
+Ook de jeugdbewegink [[KSA]] van [[Blanknberge]] et ieran zn noame te dankn, noameluk 'Scarphoutstede'.
 
 [[Categorie:Blanknberge]]
 [[Categorie:Middelêeuwen]]
