--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -1,8 +1,10 @@
-De '''Weireldkampioenschappn Velokoerse''' zyn een collectie van [[velokoerse|velokoersn]] woarvan da de winnoars udder weireldkampioen meugn noemn. Ze goan deure ip't ende van et wielersezoen, ievers eind september, begun oktober. Ze weirdn deur de [[UCI]] georganiseerd sedert [[1927]].
-
-==Karakter==
 [[Ofbeeldienge:jersey rainbow.svg|100px|thumb|Boai in de kleurn van de regenboge]]
-Oloewel da de weireldkampioenschappn by de profs et mêest gekend zyn, zyn der in de andere categorieen ôok wedstrydn: by de beloftn en de vrouwn. Noast het boankampioenschap goat ôok het tydritkampioenschap deure. Der zyn een aantal dingn die et weireldkampioenschap ounderscheidn van normoale koersn: zô es't de ênige koerse die deuregoat met nationoale teams (van 10 man). De koerse weirdt gereen ip een geslootn lokoal parcoer in ne (grôte) stad. De winnoare mag een joar de zogezeide 'regenboogtrui' droagn. Deur de lange afstand bluuft de koerse olsan vrêe lange geslootn, en es't soms moar in de latste round(n) dat er iet gebeurt.
+De '''Weireldkampioenschappn Velokoerse''' zyn een collectie van [[velokoerse|velokoersn]] woarvan da de winnoars udder weireldkampioen meugn noemn. 't Zyn êendagswedstrydn die deuregoan ip 't ende van 't wielersezoen, ievers eind september, begun oktober. Ze weirdn deur de [[UCI]] georganiseerd sedert [[1927]]. Sedert 1994 bestoat er ouk e weireldkampioenschap tydrit. 
+D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en de vrouwn. De winnoare mag een joar de zogezeide 'regenboogtrui' droagn. 
+
+== Organisoasje en parcours ==
+Der zyn een aantal dingn die et weireldkampioenschap ounderscheidn van normoale koersn: zô es't de ênige koerse die deuregoat met nationoale teams (van 10 man). De koerse weirdt gereen ip een geslootn lokoal parcours in ne (grôte) stad. Deur de lange afstand bluuft de koerse olsan vrêe lange geslootn, en es't soms moar in de latste round(n) dat er iet gebeurt. 
+Omdat 't WK idder joar deuregoat in e angern stad, verschilln de parcours ossan. Nu is ’t e ki plat en zyn de sprinters bevôordeeld, ton were zit er e bergsje in en zyn de klemmers in ’t vôordêel. ’t WK is ol twi keirs in [[West-Vloandern]] organiseerd ewist: in 1950 in [[Môoslee]] en in 1957 in [[Woaregem]]. 
 
 ==Weireldkampioenschappn 2007==
 In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30 september. De elite moest 267,4 km ofleggen, de vrouwn en beloftn 133,7 en 171,9 km. De winnoars woarn:
@@ -27,6 +29,7 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 *[[1996]] in Lugano: [[Johan Museeuw]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
 
 ==Belgn en West-Vloamiengn==
+[[Ofbeeldienge:Tomboonen antwerpen.JPG|thumb|Tom Boonen als weireldkampioen (2006)]]
 De [[België|Belgn]] zyn et mêest succesvol gewist in de Weireldkampioenschappn: België telt 25 weireldkampioenn, en eit doarmee de êeste platse. [[Itoalië]] es twiddes mè 17 kampioenn. Tom Boonen wos de latste Belg die gewounn eit, Johan Museeuw de latste [[West-Vloandern|West-Vloamieng]]. Andere Belgn zyn [[Rudy Daenens]] ([[1990]]), [[Claude Criquielion]] ([[1984]]), [[Freddy Maertens]] ([[1981]]), [[Eddy Merckx]] ([[1974]], [[1971]], [[1967]]), [[Benoni Beheyt]] ([[1963]]), [[Rik Van Looy]] ([[1961]], [[1960]]), [[Rik Van Steenbergen]] ([[1957]], [[1956]], [[1949]]), [[Stan Ockers]] ([[1955]]), [[Briek Schotte]] ([[1950]], [[1948]]), [[Marcel Kint]] ([[1938]]), [[Eloi Meulenberg]] ([[1937]]), [[Jean Aerts]] ([[1935]]), [[Karel Kaers]] ([[1934]]), [[Georges Ronsse]] ([[1929]], [[1928]]).
 
 [[Categorie: Wielerkoers]]
