vlagjes staan mooier zonder haakjes... een testje

--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -8,12 +8,12 @@ Omdat 't WK idder joar deuregoat in e angern stad, verschilln de parcours ossan.
 
 ==Weireldkampioenschappn 2007==
 In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30 september. De elite moest 267,4 km ofleggen, de vrouwn en beloftn 133,7 en 171,9 km. De winnoars woarn:
-* Tydrit vintn (beloftn): [[Lars Boom]] ([[Ofbeeldienge:Flag of the Netherlands.svg|20px]])
-* Tydrit vrouwn: [[Hanka Kupfernagel]] ([[Ofbeeldienge:Flag of Germany.svg|20px]])
-* Tydrit vintn (elite): [[Fabian Cancellara]] ([[Ofbeeldienge:Flag of Switzerland.svg|20px]])
-* Wegrit vintn (beloftn): [[Peter Velits]] ([[Ofbeeldienge:Flag of Slovakia.svg|20px]])
-* Wegrit vrouwn: [[Marta Bastianelli]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-* Wegrit elite: [[Paolo Bettini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
+* Tydrit vintn (beloftn): [[Lars Boom]] [[Ofbeeldienge:Flag of the Netherlands.svg|20px]]
+* Tydrit vrouwn: [[Hanka Kupfernagel]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
+* Tydrit vintn (elite): [[Fabian Cancellara]] [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
+* Wegrit vintn (beloftn): [[Peter Velits]] [[Ofbeeldienge:Flag of Slovakia.svg|20px]]
+* Wegrit vrouwn: [[Marta Bastianelli]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+* Wegrit elite: [[Paolo Bettini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 
 ==Weireldkampioenn elite mann van de voorbye joarn==
 *[[2006]] in Salzburg: [[Paolo Bettini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
