*Empty MediaWiki Message*

--- a/Wouter_Deprez.mw
+++ b/Wouter_Deprez.mw
@@ -9,7 +9,8 @@ By de verkiezingsprogramma's van 2007 brocht ie e stikske over êen of ander ver
 * ''Schellekes'' ([[2001]])
 * ''Moest ik van u zijn'' ([[2002]])
 * ''Koning Keizer Kannibaal'' ([[2004]])
-* ''War'' (2005)
+* ''War'' ([[2005]])
+* ''Eelt'' ([[2007]])
 
 ==Pryzn==
 *2000: Wouter Deprez woun Humorologie in Marke
