--- a/Vlamsche_Kust.mw
+++ b/Vlamsche_Kust.mw
@@ -6,7 +6,7 @@ Uniek an de Vlamsche Kust is 't feit da 't ollemoale zandstrandn zyn. Da makt da
 
 In de moandn juli en ogustus is de kust ton ôok overspoeld mi toeristn uut binn- e buutnland. Mor ôok doabuutn komn d'r vele menschen kykn nor uus woater, [[strange]] en dykn. 
 
-'t Gevolg van da massatoerisme is dat er veel appartementsgebouwn stoan, wa da sommign 'n anslag viendn ip de goeie smoake. Moar neffest de bebouwde komn zyn der ôok nog schône nateurplekkn te viendn: een antal vôorbeeldn zyn 't [[Zwin]], 'n [[Ogen Blekker]], en een antal dunegebiedn (vôorbeeld tusschn [[Nieuwpôort]] en [[Ôostduunkerke]]). 
+'t Gevolg van da massatoerisme is dat er veel appartementsgebouwn vlaams is een kut taal wtf dit slaat egt nergens op jezus hoe de fak kan je nou weer zo pratenstoan, wa da sommign 'n anslag viendn ip de goeie smoake. Moar neffest de bebouwde komn zyn der ôok nog schône nateurplekkn te viendn: een antal vôorbeeldn zyn 't [[Zwin]], 'n [[Ogen Blekker]], en een antal dunegebiedn (vôorbeeld tusschn [[Nieuwpôort]] en [[Ôostduunkerke]]). 
 
 Neffest nateurlike schôoneid eit de Vlamsche Kust nog andere attracties gelik '''attractieparkn''': In [[Oyenkerke]] ei je [[Plopsaland]], in [[Blanknberge]] ei je 't [[Sea Life Centre]], en in [[Ostende (stad)|Ostende]] ei je [[Earth Explorer]]. Der zyn ôok twêe '''subtropische zwemparadyzen''' van Sun Parks (in Ôostduunkerke en [[D'n Oane]]), vele '''jachtoavns''' (Blanknberge, Ostende, Nieuwpôort). In [[Knokke-Heist]] keun je golfen. In Ostende, [[Middelkerke]] en Blanknberge ei je ôok 'n '''Casino'''.
 
