--- a/Gent-Wevelgem.mw
+++ b/Gent-Wevelgem.mw
@@ -11,7 +11,7 @@ Sommigte [[West-Vloandern|West-Vloamingn]] ein de koers ol gewonn: [[Nico Mattan
 * 2004 	[[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 * 2003 	[[Andreas Klier]] [[Ofbeeldienge:Flag of Germany.svg|20px]]
 * 2002 	[[Mario Cipollini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
-* 2001 	[[George Hincapie]] (USA) [[Ofbeeldienge:Flag of the United States.svg|20px]]
+* 2001 	[[George Hincapie]] [[Ofbeeldienge:Flag of the United States.svg|20px]]
 * 2000 	[[Geert van Bondt]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 * 1999 	[[Tom Steels]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 * 1998 	[[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
