/* Weireldkampioenn elite mann van de voorbye joarn */

--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -26,7 +26,7 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 *[[1999]] in Verona: Oscar Freire ([[Ofbeeldienge:Flag of Spain.svg|20px]])
 *[[1998]] in Valkenburg: [[Oscar Camenzind]] ([[Ofbeeldienge:Flag of Switzerland.svg|20px]])
 *[[1997]] in San Sebastian: [[Laurent Brochard]] ([[Ofbeeldienge:Flag of France.svg|20px]])
-*[[1996]] in Lugano: [[Johan Museeuw]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
+*[[Weireldkampioenschappn Velokoerse (1996)|1996]] in Lugano: [[Johan Museeuw]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
 
 ==Belgn en West-Vloamiengn==
 [[Ofbeeldienge:Tomboonen antwerpen.JPG|thumb|Tom Boonen als weireldkampioen (2006)]]
