--- a/Gullegem.mw
+++ b/Gullegem.mw
@@ -19,7 +19,7 @@
 
 Oewel da't van oorsproungg e boeredorp es gewist, es 't nu vô en grôot stuk verstedelikt en ligt 't an den periferiek van [[Kortryk]]. Der es een afdêlinge van 't VTI van Kortryk in Gullegem woar da je tot in 't vierde middelboar na toe kun goan.  't Platselik jeugduus es de pro-mille die ollejoare de jeugdfêestn organiseern.  
 
-Belangrykste festiviteitn zyn: de jeugdfêestn, d'ommegangsfêeste, de meibôomplantinge, knetter, carnaval.
+Belangrykste festiviteitn zyn: de jeugdfêestn, Kokopelli Festival, d'ommegangsfêeste, de meibôomplantinge, knetter, carnaval.
 't Verênigingsleven is er ôok met byvorbeeld: de chiro, de KSA, de scouts, +13, de [[KAJ]], den heemkundigen kring [[De meibôom]], de [[KAV]] enzomêer.
 
 In Gullegem ligt sedert ênigte joaren ôok e provencioal domin: ''De Bergelenput''.
