*Empty MediaWiki Message*

--- a/Weireldkampioenschappn_velokoerse_1996.mw
+++ b/Weireldkampioenschappn_velokoerse_1996.mw
@@ -1,4 +1,4 @@
-'t '''Weireldkampioenschap koers 1996''' wos organiseerd in Lugano (Zwitserland) van 'n 20sn tout 'n 25sn september 2005. De koers vo de elite by de mann wos 264 km lank. Winnoare was [[Johan Museeuw]]. Mauro Gianetti en [[Michele Bartoli]] woarn twiddn en derdn. 
+'t '''Weireldkampioenschap koers 1996''' wos organiseerd in Lugano ([[Zwitserland]]) van 'n 20sn tout 'n 25sn september 2005. De koers vo de elite by de mann wos 264 km lank. Winnoare was [[Johan Museeuw]]. Mauro Gianetti en [[Michele Bartoli]] woarn twiddn en derdn. 
 
 == Koersverloop (elite) ==
 't Parcours wos zwoar en surtout van passe voor e klemmer. Achter 120 km is 't er e grôotn groep ontsnapt. Museeuw is  mei, t'ope met ounder anger 3 Zwitschers die nunder hêlegans geevn vor eigen publiek. Museeuw is vorzichtig mi zyn krachtn: iddern klem begunt an 'n kop en e lat nem in de beklemmieng uutzakkn tout an 'n steirt van 'n groep.
