*Empty MediaWiki Message*

--- a/Weireldkampioenschappn_velokoerse_1996.mw
+++ b/Weireldkampioenschappn_velokoerse_1996.mw
@@ -1,8 +1,8 @@
-'t '''Weireldkampioenschap koers 1996''' wos organiseerd in Lugano ([[Zwitserland]]) van 'n 20sn tout 'n 25sn september 2005. De koers vo de elite by de mann wos 264 km lank. Winnoare was [[Johan Museeuw]]. Mauro Gianetti en [[Michele Bartoli]] woarn twiddn en derdn. 
+'t '''Weireldkampioenschap koers 1996''' wos organiseerd in Lugano ([[Zwitserland]]) van 'n 20sn tout 'n 25sn september 1996. De koers vo de elite by de mann wos 264 km lank. Winnoare was [[Johan Museeuw]]. Mauro Gianetti en [[Michele Bartoli]] woarn twiddn en derdn. 
 
 == Koersverloop (elite) ==
 't Parcours wos zwoar en surtout van passe voor e klemmer. Achter 120 km is 't er e grôotn groep ontsnapt. Museeuw is  mei, t'ope met ounder anger 3 Zwitschers die nunder hêlegans geevn vor eigen publiek. Museeuw is vorzichtig mi zyn krachtn: iddern klem begunt an 'n kop en e lat nem in de beklemmieng uutzakkn tout an 'n steirt van 'n groep.
-In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uut 't peletong wos Andrea Tafi ontsnapt. Dat wos e ploegmoat (Mapei-GB) van Johan Museeuw, en doavan et 'n lêep gebruuk emakt. Gianetti kwam nerveus en e rêed à bloc op kop om te zorn da Tafi ni koste noazen. In de latste rounde dei Museeuw lik of da 'n stêendôod zat. An 'n arrivée koste Museeuw, die nem maximaal espoard adde, makkelik winn van Gianetti die 't mêeste werk edoan adde. Museeuw won op zyn 31sn verjoardag. 
+In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uut 't peletong wos Andrea Tafi ontsnapt. Dat wos e ploegmoat (Mapei-GB) van Johan Museeuw, en doavan et 'n lêep gebruuk emakt. Gianetti kwam nerveus en e rêed à bloc op kop om te zorgn da Tafi ni koste noazen. In de latste rounde dei Museeuw lik of da 'n stêendôod zat. An 'n arrivée koste Museeuw, die nem maximaal espoard adde, makkelik winn van Gianetti die 't mêeste werk edoan adde. Museeuw won op zyn 31sn verjoardag. 
 
 == Uutslag (elite) ==
 1. [[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 23' 50"
