--- a/Ann_Wauters.mw
+++ b/Ann_Wauters.mw
@@ -2,7 +2,7 @@
 
 '''Ann Wauters''' ([[Sint-Niklaas]], [[12 oktober]] [[1980]]) is een [[Ôost-Vloandern|Ôost-Vlamsche]] [[basket]]speelster.
 
-Ze begost te baskettn os ze 12 joar oud was by Osiris [[Aalst]] en ze speelt nu by de [[Rusland|Russische]] ploeg Samara. Z’is al vier kêers verkoozn tout [[Europa|Europeesche]] speelster van ‘t joar en z’is d’ êeste en ênigste [[België|Belgische]] speelster die in den [[USA|Amerikoanschn]] [[WNBA]] speelt, den [[NBA]] vo vrouwn, de mêest prestigieuze basketcompetitie, met de beste spelers ter weireld.  Z’is 1.93 m grôot en ze speelt ip de centerpositie. Ze speelt me numero 12, eur geboortedoatum. 
+Ze begost te baskettn os ze 12 joar oud was by Osiris [[Aalst]] en ze speelt nu by de [[Rusland|Russische]] ploeg Samara. Z’is al vier kêers verkoozn tout [[Europa|Europeesche]] speelster van ‘t joar en z’is d’êeste en ênigste [[België|Belgische]] speelster die in den [[USA|Amerikoanschn]] [[WNBA]] speelt, den [[NBA]] vo vrouwn, de mêest prestigieuze basketcompetitie, met de beste spelers ter weireld.  Z’is 1.93 m grôot en ze speelt ip de centerpositie. Ze speelt me numero 12, eur geboortedoatum. 
 
 Eur manager is de [[West-Vloandern|West-Vlamsche]] basketster Sarah De Clerck uut [[Kortryk]], dochter van [[Stefaan De Clerck]]. 
 ==Palmares==
@@ -20,7 +20,7 @@ Eur manager is de [[West-Vloandern|West-Vlamsche]] basketster Sarah De Clerck uu
 :2006 : Samsung Seoul (Zuud-Korea) 
 :2006-2008: CSKA Samara (Rusland)
 
-===Meegedoan an===
+===Deelnoame===
 :1995: Europees kampioenschap (Kadettn)
 :1996: Europees kampioenschap (Juniors)
 :1998: Europees kampioenschap (Juniors)
@@ -35,7 +35,7 @@ Eur manager is de [[West-Vloandern|West-Vlamsche]] basketster Sarah De Clerck uu
 :2005: Euroleague
 :2006: Euroleague
 :2007: Euroleague
-===Ounderscheidiengn===
+===Pryzn===
 :1995: Bronzn medaille (EC vo kadettn)
 :1997: Beker van België (Juniors)
 :1997: MVP: European Olympic Days for Young
@@ -69,6 +69,8 @@ Eur manager is de [[West-Vloandern|West-Vlamsche]] basketster Sarah De Clerck uu
 :2006: Kampioen van Zuud-Korea
 :2007: Beker van Rusland
 :2007: Euroleague finalist (3e)
+==Zomer 2008==
+Ann Wauters speelt in de [[zomer]] van [[2008]] in de [[WNBA]]-competitie by de San Antonio Silver Stars. De coach is Dan Hughes, die by de Cleveland Rockers in 2000 eur êeste coach was in de WNBA. De competie begunt de 17ste meie, een poar doagn achter de Russische finale. Ann Wauters goat in de zelfste zoale speeln lik de in [[Brugge]] geboorn [[Tony Parker]], die by de San Antonio Spurs speelt in den [[NBA]].
 ==Externe koppeliengn==
 *[http://www.annwauters.be Website Ann Wauters]
 *[http://www.wnba.com/playerfile/ann_wauters/index.html WNBA Player Profile]
