*Empty MediaWiki Message*

--- a/Belcanto_Classic.mw
+++ b/Belcanto_Classic.mw
@@ -5,23 +5,21 @@
 |-
 |[[Ofbeeldienge:start95.jpg|thumb|250px| An de start in 1995: 9 koereurs]]
 |-
-|[[Ofbeeldienge:2006Belcanto ludykebolide.jpg|thumb|250px|Een oud'n Peugeot in de caravanne (2006)]]
-|-
 |[[Ofbeeldienge:2006Belcanto_EHBO.jpg|thumb|250px|De EHBO is op post (2006)]]
 |-
 |[[Ofbeeldienge:2006Belcanto_massa.jpg|thumb|250px|Mêer of 400 man an de start (2006)]]
 |}
 
-De '''Belcanto Classic''' is e [[vélokoerse|koers]] in [[Westouter]] die ol bestoat sedert [[1995]]. Ennis enoemd na [[Guido Belcanto]] die, tusschen pot e pinte, tope mè Frank Verdru, ’t initiatief nam om e nieuwn koers t'organiseern.
+De '''Belcanto Classic''' is e [[vélokoerse|koers]] in [[Westouter]] die ol bestoat sedert [[1995]]. En is enoemd na [[Guido Belcanto]] die, tusschen pot e pinte, tope mi Frank Verdru, ’t initiatief nam om e nieuwn koers t'organiseern.
 
 An de koers meugt olleman meidoen. In ’t begun (1995) woarn d’r moa 9 koereurs - nu stoat er ol mêer of 400 man an de mete. 
 
-De koers is verreedn op de latstn moandag van ogustus. De latste kêern woarn ‘t zeven lokoale toertjes van 8,2 km. Over berg (Sulferberg) en dal, want 't is in ’t [[Euvelland]]. 
+De koers is verreedn op de latstn moandag van ogustus. De latste kêern woarn ‘t zeven lokoale tourtjes van 8,2 km. Over berg (Sulferberg) en dal, want 't is in ’t [[Euvelland]]. 
 
-Idder joar probeert de organisoasje oek bekende noamn t’inviteern lik [[Renaat Landuyt]], [[Karl Vannieuwkerke]] en [[Patrick Lefevere]].
+Ider joar probeert de organisoasje ouk bekende noamn t’inviteern. In 't verleedn woarn ol present: [[Renaat Landuyt]], [[Karl Vannieuwkerke]], [[Patrick Lefevere]], [[Nico Mattan]], [[Peter Farazijn]], [[Frank Vandenbroucke (coureur)|Frank Vandenbroucke]], Kristien Hemmerechts,...
 
-De Belcanto Classic is gèn koers lik een ander. Want wie datter wint, is eigentlik va gèn importainsje, en d'organisoaje gèft toen oek d'n uutslag ni mè vry. ''Een koers om te beminnen, niet om te winnen'', zeggen ze zyder. 
-D’r zyn ten ander oek pryzn voe de mêest sexy koereur, ’n mêest courageusn, ’n dien mè de schonste klêers, de grotstn zwêter,... 
+De Belcanto Classic is gèn koers lik een ander. Want wie dat er wint, is eigentlik va gèn importainsje, en d'organisoaje gèft toen ouk 'n uutslag ni mè vry. ''Een koers om te beminnen, niet om te winnen'', is nunder leuze. 
+D’r zyn ten ander ouk pryzn voe de mêest sexy koereur, ’n mêest courageusn, ’n dien mè de schonste klêers, de grotstn zwêter,... 
 
 == Lyste van de winnoars ==
 ===1995===
