--- a/National_Basketball_Association.mw
+++ b/National_Basketball_Association.mw
@@ -21,11 +21,12 @@ De winnoare van de NBA Finals wordt deur d’Amerikoann "World Champion" genoemd
 *Philadelphia 76ers
 *Toronto Raptors
 ===Central Division===
-*Chicago Bulls 
+*[[Chicago Bulls]] 
 *Cleveland Cavaliers
 *Detroit Pistons
 *Indiana Pacers
 *Milwaukee Bucks
+
 ===Southeast Division===
 *Atlanta Hawks
 *Charlotte Bobcats
