*Empty MediaWiki Message*

--- a/Weireldkampioenschappn_velokoerse_1996.mw
+++ b/Weireldkampioenschappn_velokoerse_1996.mw
@@ -16,6 +16,6 @@ In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uu
 :9. Tony Rominger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 :10.Bjarne Riis [[Ofbeeldienge:Flag of Denmark.svg|20px]] z.t.
 
-[[Category:Weireldkampioenschappn velokoerse]]
+[[Category:Weireldkampioenschap velokoerse]]
 
 [[de:Straßen-Radweltmeisterschaft 1996]]
