--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -32,7 +32,7 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 [[Ofbeeldienge:Tomboonen antwerpen.JPG|thumb|Tom Boonen als weireldkampioen (2006)]]
 De [[België|Belgn]] zyn et mêest succesvol gewist in de Weireldkampioenschappn: België telt 25 weireldkampioenn, en eit doarmee de êeste platse. [[Itoalië]] es twiddes mè 17 kampioenn. Tom Boonen wos de latste Belg die gewounn eit, Johan Museeuw de latste [[West-Vloandern|West-Vloamieng]]. Andere Belgn zyn [[Rudy Daenens]] ([[1990]]), [[Claude Criquielion]] ([[1984]]), [[Freddy Maertens]] ([[1981]]), [[Eddy Merckx]] ([[1974]], [[1971]], [[1967]]), [[Jean-Pierre Monseré]] ([[1970]]), [[Benoni Beheyt]] ([[1963]]), [[Rik Van Looy]] ([[1961]], [[1960]]), [[Rik Van Steenbergen]] ([[1957]], [[1956]], [[1949]]), [[Stan Ockers]] ([[1955]]), [[Briek Schotte]] ([[1950]], [[1948]]), [[Marcel Kint]] ([[1938]]), [[Eloi Meulenberg]] ([[1937]]), [[Jean Aerts]] ([[1935]]), [[Karel Kaers]] ([[1934]]), [[Georges Ronsse]] ([[1929]], [[1928]]).
 
-[[Categorie: Wielerkoers]]
+[[Categorie:Weireldkampioenschap velokoerse| ]]
 
 [[ca:Campionat del Món de ciclisme en ruta masculí]]
 [[cs:Mistrovství světa v silniční cyklistice]]
