--- a/Nieuw_Wulvergems_Toneel.mw
+++ b/Nieuw_Wulvergems_Toneel.mw
@@ -1,6 +1,7 @@
 Het '''Nieuw Wulvergems Toneel''' (NWT) is e tonêelgezelschap van amateurs uut [[Wulvergem]] ([[Euvelland]]). 't NWT is in die streke bekend voe zyn kluchtige opvoeriengn in 't [[West-Vlams]]. Ze zyn d'r mei begunn in 1982. Etwien die d'r ol de hêeln tyd by is, is Stef Dehollander, nundern uusregisseur e bewerker.
 
 == Opvoeriengn ==
+* 2008          Mijn Dochter Staat Op Trouwen
 * 2007              (uutzounderlik gèn opvoerieng, omda de vrouwe van Stef Dehollander overleedn wos in 2006)
 * 2006	 	De Louis-Maryse zal nooit verre gaan        
 * 2005	 	Geen Goesting !
